--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: Daily Stock Scraper
 
 on:
   schedule:
-    - cron: '30 12 * * *'  # 6 PM IST
+    - cron: '30 12 * * 1-5' #12:30 PM UTC = 6:00 PM IST, Monday–Friday
   workflow_dispatch:
 
 jobs:
